--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
 
     </div>
 
-    <div id="forecasts" class="col-12 col-md-8">
+    <div id="weather-display" class="col-12 col-md-8">
       <div id="current-weather" class="card"></div>
 
-      <div id ="5-day" >
+      <div id ="forecast" >
         <h3 class= "5-day-header"> 5-Day Forecast:</h3>
+       
+        </div>
       </div>
 
     </div>
