--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 
     </div>
   </main>
-
+  <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/dayjs@1/plugin/advancedFormat.js"></script>
+  <script>dayjs.extend(window.dayjs_plugin_advancedFormat)</script>
   <script src="./assets/js/script.js"></script>
 </body>
 
