--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
     </div>
 
     <div id="weather-display" class="col-12 col-md-8">
-      <div id="current-weather" class="card"></div>
+      <div id="current-weather" class="card">
+        
+    </div>
 
       <div id ="forecast" >
-        <h3 class= "5-day-header"> 5-Day Forecast:</h3>
+        <h4 class= "5-day-header"> 5-Day Forecast:</h4>
        
         </div>
       </div>
