--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
     </div>
   </main>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/plugin/advancedFormat.js"></script>
   <script>dayjs.extend(window.dayjs_plugin_advancedFormat)</script>
